fix(mobile): Hide overflow of hamburger on the mobile devices

--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -26,6 +26,7 @@ body {
   color: var(--text-dark);
   line-height: 1.7;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, .logo {
